--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/tylermaran/club_api#readme",
   "dependencies": {
+    "aws-sdk": "^2.395.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
@@ -32,7 +33,8 @@
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
