--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
       - echo Build started on `date`
       - echo Compiling the Node.js code
       - npm start
+      - echo Started
   post_build:
     commands:
       - echo Build completed on `date`
