--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mongoose": "^5.4.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
